Page postulant Organigramme dynamique + page réalisateur Notation

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>projetEtude</name>
+	<name>Projet version1</name>
 	<comment></comment>
 	<projects>
 	</projects>
